--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon run index.js"
   },
   "author": "Rutik Khalkar",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^10.0.0",
     "ethereumjs-tx": "^2.1.2",
+    "express": "^4.17.2",
+    "mongodb": "^4.2.2",
+    "mongoose": "^6.1.2",
     "web3": "^1.6.1"
   }
 }
